refactor method 'loadAccounts'